# tuig

./: .gitignore  .~lock.design-doc.odt#  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.txt  build.rs  design-doc.odt  run-coverage.sh  x.sh
.github/: FUNDING.yml
.github/workflows/: build-packages.yml  run-tests.yml
ci/: tests.sh
engine/: Cargo.toml
redshell/: Cargo.toml
redshell/src/: event.rs  game.rs  gamestate.rs  lib.rs  main.rs  state.rs
redshell/src/agents/: cf.rs  event.rs
redshell/src/app/: chat.rs  cli.rs  mod.rs
redshell/src/concept/: mod.rs
redshell/src/cutscenes/: mod.rs
redshell/src/game/: mod.rs
redshell/src/io/: output.rs
redshell/src/io/helpers/: text_input.rs
redshell/src/io/sys/: ansi_cli.rs  mod.rs
redshell/src/io/sys/gui/: mod.rs
redshell/src/io/widgets/: header.rs  horizontal.rs  textbox.rs
redshell/src/machine/: mod.rs
redshell/src/tools/: cd.rs  ls.rs  mkdir.rs  mod.rs  touch.rs
redshell/src/tools/args/: bsd.rs  mod.rs
src/: apps.rs  constants.rs  events.rs  game.rs  gamestate.rs  lib.rs  machine.rs  main.rs  runner.rs  systems.rs  timing.rs  util.rs
src/agents/: cf.rs  event.rs  mod.rs
src/agents/tools/: cd.rs  ls.rs  mkdir.rs  mod.rs  touch.rs
src/agents/tools/args/: bsd.rs  mod.rs
src/agents/tools/completers/: bsd.rs  mod.rs
src/app/: chat.rs  cli.rs  mod.rs
src/cutscenes/: intro.rs  mod.rs
src/cutscenes/intro/: mod.rs  splatty.rs  tutorial1.rs
src/event/: mod.rs
src/gameplay/: chat.rs
src/io/: clifmt.rs  input.rs  mod.rs  output.rs  text.rs  text_input.rs
src/io/helpers/: mod.rs  modstate.rs  text_input.rs
src/io/input/: ansi_cli.rs  mod.rs  test.rs
src/io/output/: ansi_cli.rs  mod.rs  test.rs  text.rs
src/io/output/widgets/: header.rs  horizontal.rs  textbox.rs  vertical.rs
src/io/sys/: ansi_cli.rs  mod.rs  nop.rs
src/io/sys/gui/: mod.rs  softbuffer.rs
src/io/widgets/: header.rs  horizontal.rs  mod.rs  textbox.rs  vertical.rs
src/langs/: en.yml  es.yml  mod.rs
src/machine/: mod.rs
src/output/: ansi_cli.rs  mod.rs  test.rs
src/saves/: fs.rs  mod.rs
src/tools/: cd.rs  ls.rs  mkdir.rs  mod.rs  touch.rs
src/tools/args/: bsd.rs  mod.rs
tuig/: Cargo.toml  README.md
tuig-iosys/: Cargo.toml  README.md
tuig-iosys/examples/: basic-tui.rs  color-demo.rs  list-actions.rs
tuig-iosys/src/: action.rs  error.rs  fmt.rs  lib.rs  screen.rs  traits.rs  util.rs  xy.rs
tuig-iosys/src/fmt/: mod.rs
tuig-iosys/src/graphical/: mod.rs  softbuffer.rs
tuig-iosys/src/misc/: mod.rs  nop.rs
tuig-iosys/src/terminal/: crossterm.rs  mod.rs
tuig-iosys/src/ui/: attach.rs  bounds.rs  inputstate.rs  mod.rs  region.rs  scroll.rs  view.rs
tuig-iosys/src/ui/attachments/: button.rs  mod.rs  textbox.rs
tuig-iosys/src/ui/elements/: fill.rs  mod.rs  text_input.rs  textbox.rs
tuig-iosys/src/ui/helpers/: mod.rs  modstate.rs  text_input.rs
tuig-iosys/src/ui/splitters/: cols.rs  mod.rs  statics.rs
tuig-iosys/src/ui/widgets/: header.rs  horizontal.rs  mod.rs  textbox.rs  vertical.rs
tuig-old/: Cargo.toml
tuig-old/src/: game.rs  runner.rs
tuig-old/src/format/: mod.rs
tuig-old/src/io/: mod.rs  output.rs
tuig-old/src/io/helpers/: modstate.rs  text_input.rs
tuig-old/src/io/sys/: nop.rs
tuig-old/src/io/sys/gui/: softbuffer.rs
tuig-old/src/io/widgets/: textbox.rs  vertical.rs
tuig-pm/: Cargo.toml  README.md
tuig-pm/src/: cols.rs  force_docs_nightly.rs  lib.rs  make_load.rs  setters.rs  splitter.rs  splitters.rs
tuig-ui/: Cargo.toml  README.md
tuig-ui/examples/: basic-tui.rs  list-actions.rs
tuig-ui/src/: adapter.rs  bounds.rs  inputstate.rs  lib.rs  macros.rs  mod.rs  region.rs  view.rs
tuig-ui/src/attachments/: button.rs  mod.rs  text_input.rs  textbox.rs
tuig-ui/src/splitters/: mod.rs  statics.rs
tuig/src/: agent.rs  game.rs  lib.rs  message.rs  runner.rs
tuig/src/agent/: mod.rs
tuig/src/docs/: mod.rs  walkthrough.rs
tuig/src/game/: mod.rs
tuig/src/io/: mod.rs  output.rs
tuig/src/io/helpers/: text_input.rs
tuig/src/io/sys/: ansi_cli.rs  mod.rs  nop.rs
tuig/src/io/sys/gui/: mod.rs  softbuffer.rs
tuig/src/io/widgets/: header.rs  horizontal.rs  textbox.rs  vertical.rs
tuig/src/runner/: mod.rs
tuig/src/util/: macros.rs  mod.rs  timing.rs
