[package]
name = "redshell"
version = "0.0.4"
edition = "2021"
description = "A console-based hacking game. Currently building the engine to support dual TUI/GUI interfaces."
license = "BSD-3-Clause"

# if bumping this, be sure to edit run-tests as well!
rust-version = "1.59"

[features]
# `__` indicates you should NOT manually set that feature!
# (though ideally you'd only ever set `plat_` features!)

__sys = []
sys_cli = ["__sys", "crossterm"]

__sys_gui = ["__sys", "winit"]
sys_gui_softbuffer = ["__sys_gui"]

# for running as an SSH 'shell' (or any other TTY)
plat_ssh = ["sys_cli"]
# for distribution on Steam
plat_steam = []
# for distributing on bootable media
plat_floppy = []
# for itch.io and other web instances
plat_wasm = []

[[bin]]
name = "redshell-concept"
required-features = ["__sys"]

[[bin]]
name = "gui-test"
required-features = ["__sys_gui"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
paste = "1.0.5"
crossterm = { version = "0.20.0", optional = true }
tokio = { version = "1.15.0", features = [ "full" ] }
enum_dispatch = "0.3.7"
async-trait = "0.1.52"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
winit = { version = "0.27.5", optional = true }
