[package]
name = "redshell"
version = "0.0.4"
edition = "2021"
description = "A console-based hacking game. Currently building the engine to support dual TUI/GUI interfaces."
license = "BSD-3-Clause"

# if bumping this, be sure to edit run-tests as well!
rust-version = "1.64"

[features]
# `__` indicates you should NOT manually set that feature!
# (though ideally you'd only ever set `plat_` features!)

__io = []
io_nop = ["__io"]
io_cli = ["__io", "crossterm"]
__io_gui = ["__io", "winit"]
io_gui_softbuffer = ["__io_gui", "fontdue", "softbuffer", "rayon", "winapi/winuser"]

__run = []
run_orig = ["__run"]
run_single = ["__run"]
run_rayon = ["__run", "rayon", "crossbeam"]

plat_ssh = ["io_cli"]
plat_steam = []
plat_floppy = []
plat_wasm = []

[[bin]]
name = "redshell-concept"
required-features = ["__io"]

[[bin]]
name = "redshell"
required-features = ["__io", "__run"]

# [[bench]]
# name = "mass-events"
# harness = false

[dependencies]
tuig = { path = "../tuig" }

paste = "1.0.5"
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
dashmap = "5.4.0"
# io_cli
crossterm = { version = "0.20.0", optional = true }
# io_gui_*
winit = { version = "0.27.5", optional = true }
# io_gui_softbuffer
softbuffer = { version = "0.1.1", optional = true }
fontdue = { version = "0.7.2", optional = true }
rayon = { version = "1.6.1", optional = true }
winapi = { version = "0.3.9", optional = true }
# run_rayon
crossbeam = { version = "0.8.2", optional = true }

[dev-dependencies]
coverage-helper = "0.1.0"
mock_instant = "0.2.1"
