[package]
name = "tuig-iosys"
version = "0.0.1"
edition = "2021"

[features]
std = []
ui = []

nop = []
cli_crossterm = ["crossterm"]
gui = ["winit"]
gui_softbuffer = ["gui", "softbuffer", "rayon", "fontdue"]

[dependencies]
paste = "1.0.12"
crossterm = { version = "0.26.1", optional = true }
fontdue = { version = "0.7.2", optional = true }
rayon = { version = "1.7.0", optional = true }
softbuffer = { version = "0.2.0", optional = true }
winit = { version = "0.28.3", optional = true }
