[package]
name = "tuig-iosys"
version = "0.0.4"
edition = "2021"
description = "Multi-backend terminal-like text grid rendering."
license = "BSD-3-Clause"
repository = "https://github.com/nic-hartley/tuig"
rust-version = "1.63"

[features]
std = []

nop = []
cli_crossterm = ["crossterm"]
gui = ["winit"]
gui_softbuffer = ["gui", "softbuffer", "rayon", "fontdue"]

[dependencies]
tuig-pm = { version = "0.0.4", path = "../tuig-pm" }

paste = "1.0.12"
crossterm = { version = "0.26.1", optional = true }
fontdue = { version = "0.7.2", optional = true }
rayon = { version = "1.7.0", optional = true }
softbuffer = { version = "0.2.0", optional = true }
winit = { version = "0.28.3", optional = true }
