[package]
name = "tuig-pm"
version = "0.0.4"
edition = "2021"
description = "Procedural macro crate for tuig/tuig-ui/tuig-iosys"
license = "BSD-3-Clause"
repository = "https://github.com/nic-hartley/tuig"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.52"
quote = "1.0.26"
rustc_version = "0.4.0"
syn = { version = "2.0.2", features = ["parsing", "full"] }
