[package]
name = "tuig-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
tuig-iosys = { version = "0.0.4", path = "../tuig-iosys" }
tuig-pm = { version = "0.0.4", path = "../tuig-pm" }
