[package]
name = "tuig-ui"
version = "0.0.4"
edition = "2021"
description = "A predictable immediate-mode UI system for character grids."
license = "BSD-3-Clause"
repository = "https://github.com/nic-hartley/tuig"
rust-version = "1.63"

[dependencies]
paste = "1.0.14"
tuig-iosys = { version = "0.0.4", path = "../tuig-iosys" }
tuig-pm = { version = "0.0.4", path = "../tuig-pm" }
