[package]
name = "tuig"
version = "0.0.1"
edition = "2021"
description = "Flexible, portable, and fast game engine for textmode games."
license = "BSD-3-Clause"

[features]
# See tuig::docs::features for crucial information.
__io = []
io_nop = ["__io", "tuig-iosys/nop"]
io_cli_crossterm = ["__io", "tuig-iosys/cli_crossterm"]
io_gui_softbuffer = ["__io", "tuig-iosys/gui_softbuffer"]

__run = []
run_orig = ["__run"]
run_single = ["__run"]
run_rayon = ["__run", "rayon", "crossbeam"]

std = ["tuig-iosys/std"]

test_extras = []

[[bin]]
name = "mass-events"
required-features = ["io_nop", "__run"]

[dependencies]
tuig-iosys = { version = "0.0.1", path = "../tuig-iosys", features = ["ui"] }
tuig-pm = { version = "0.0.1", path = "../tuig-pm" }

crossbeam = { version = "0.8.2", optional = true }
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
mock_instant = "0.2.1"
