[package]
name = "tuig"
version = "0.0.4"
edition = "2021"
description = "Flexible, portable, and fast game engine for textmode games."
license = "BSD-3-Clause"
repository = "https://github.com/nic-hartley/tuig"

[features]
# See tuig::docs::features for crucial information.
__io = []
io_nop = ["__io", "tuig-iosys/nop"]
io_cli_crossterm = ["__io", "std", "tuig-iosys/cli_crossterm"]
io_gui_softbuffer = ["__io", "std", "tuig-iosys/gui_softbuffer"]

__run = []
run_orig = ["__run"]
run_single = ["__run"]
run_rayon = ["__run", "std", "rayon", "crossbeam"]

std = ["tuig-iosys/std"]

test_extras = []

[[bin]]
name = "mass-messages"
required-features = ["io_nop", "__run"]

[dependencies]
tuig-iosys = { version = "0.0.4", path = "../tuig-iosys" }
tuig-pm = { version = "0.0.4", path = "../tuig-pm" }
tuig-ui = { version = "0.1.0", path = "../tuig-ui" }

crossbeam = { version = "0.8.2", optional = true }
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
mock_instant = "0.2.1"
